@@ -1,21 +1,18 @@
-import org.asciidoctor.gradle.AsciidoctorTask
 import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 import org.springframework.boot.gradle.tasks.bundling.BootJar
 
 plugins {
     kotlin("plugin.jpa") version "1.3.72"
-    kotlin("jvm") version "1.3.72"
+    kotlin("jvm") version "1.6.21"
     kotlin("plugin.spring") version "1.3.72"
     kotlin("plugin.allopen") version "1.3.72"
     kotlin("kapt") version "1.3.72"
-
     id("org.springframework.boot") version "2.2.6.RELEASE"
     id("io.spring.dependency-management") version "1.0.9.RELEASE"
-    id("org.asciidoctor.convert") version "1.6.1"
 }
 
 group = "snc.openchargingnetwork.node"
-version = "1.1.2"
+version = "1.2.0-rc2"
 java.sourceCompatibility = JavaVersion.VERSION_1_8
 
 val snippetsDir = "build/generated-snippets"
@@ -28,22 +25,26 @@ configurations {
 }
 
 repositories {
-    jcenter()
+    mavenLocal()
+    mavenCentral()
+    jcenter() // Use cautiously as it's deprecated
+    gradlePluginPortal() // Added for plugin dependencies
+    maven("https://jitpack.io") // Add this line
 }
 
 dependencies {
-    implementation("shareandcharge.openchargingnetwork:notary:1.0.1")
     implementation("org.springframework.boot:spring-boot-starter-data-jpa")
     implementation("org.springframework.boot:spring-boot-starter-web")
     implementation("com.fasterxml.jackson.module:jackson-module-kotlin")
     implementation("org.jetbrains.kotlin:kotlin-reflect")
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
-    implementation("khttp:khttp:1.0.0")
+    implementation("org.danilopianini:khttp:1.2.2")
     implementation("org.web3j:core:4.5.5")
     implementation("org.postgresql:postgresql:42.2.12")
+    implementation("com.jayway.jsonpath:json-path:2.9.0")
+    implementation("com.aayushatharva.brotli4j:brotli4j:1.7.0")
     runtimeOnly("com.h2database:h2")
     kapt("org.springframework.boot:spring-boot-configuration-processor")
-    asciidoctor("org.springframework.restdocs:spring-restdocs-asciidoctor:2.0.4.RELEASE")
     developmentOnly("org.springframework.boot:spring-boot-devtools")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine")
     testImplementation("org.springframework.boot:spring-boot-starter-test") {
@@ -57,12 +58,16 @@ dependencies {
     testImplementation("org.springframework.restdocs:spring-restdocs-mockmvc:2.0.4.RELEASE")
     testImplementation("io.javalin:javalin:3.8.0")
     testImplementation("org.awaitility:awaitility-kotlin:4.0.2")
+
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4")
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-reactor:1.6.4")
+    implementation("org.slf4j:slf4j-api:1.7.36")
 }
 
 allOpen {
     annotation("javax.persistence.Entity")
     annotation("javax.persistence.Embeddable")
-    annotation("javax.persistence.MappedSuperClass")
+    annotation("javax.persistence.MappedSuperclass")
 }
 
 tasks.withType<KotlinCompile> {
@@ -97,35 +102,21 @@ tasks.register<Exec>("ganache") {
     group = "help"
     description = "Runs a ganache-cli instance for integration testing."
     commandLine(listOf(
-            "/usr/bin/env",
-            "ganache-cli",
-            "-m=candy maple cake sugar pudding cream honey rich smooth crumble sweet treat",
-            "--port=8544",
-            "--accounts=20",
-            "--networkId=9",
-            "--gasLimit=10000000"))
-}
-
-val asciidoctor by tasks.getting(AsciidoctorTask::class) {
-    inputs.dir(snippetsDir)
-    dependsOn(test)
-}
-
-tasks {
-    "bootJar"(BootJar::class) {
-        dependsOn(asciidoctor)
-        from("${asciidoctor.get().outputDir}/html5") {
-            into("static/docs")
-        }
-    }
+        "/usr/bin/env",
+        "ganache-cli",
+        "-m=candy maple cake sugar pudding cream honey rich smooth crumble sweet treat",
+        "--port=8544",
+        "--accounts=20",
+        "--networkId=9",
+        "--gasLimit=10000000"
+    ))
 }
 
 (tasks.getByName("processResources") as ProcessResources).apply {
     val profile: String by project
+    println("Building using **/application.$profile.properties")
     include("**/application.$profile.properties")
-    rename {
-        "application.properties"
-    }
+    rename { "application.properties" }
 }
 
 tasks.register<Tar>("archive") {
@@ -137,13 +128,19 @@ tasks.register<Tar>("archive") {
 
     into ("/ocn-node-${project.version}") {
         from(
-                "$buildDir/libs/ocn-node-${project.version}.jar",
-                "src/main/resources/application.dev.properties",
-                "src/main/resources/application.prod.properties",
-                "infra/ocn-node.service",
-                "README.md",
-                "CONFIGURATION.md",
-                "CHANGELOG.md")
+            "$buildDir/libs/ocn-node-${project.version}.jar",
+            "src/main/resources/application.dev.properties",
+            "src/main/resources/application.prod.properties",
+            "infra/ocn-node.service",
+            "README.md",
+            "CONFIGURATION.md",
+            "CHANGELOG.md"
+        )
     }
+}
 
+tasks.withType<JavaExec> {
+    jvmArgs = listOf(
+        "--add-opens", "java.base/java.net=ALL-UNNAMED"
+    )
 }
